Initial run of immaculate
- Hasn't fully been run, certain files cause exceptions