@@ -2,9 +2,6 @@ package com.simibubi.create.content.decoration.palettes;
 
 import static com.simibubi.create.foundation.data.TagGen.pickaxeOnly;
 
-import java.util.Arrays;
-import java.util.function.Supplier;
-
 import com.simibubi.create.Create;
 import com.simibubi.create.foundation.data.CreateRegistrate;
 import com.tterrag.registrate.builders.BlockBuilder;
@@ -31,240 +28,280 @@ import net.minecraft.world.level.block.SlabBlock;
 import net.minecraft.world.level.block.StairBlock;
 import net.minecraft.world.level.block.WallBlock;
 import net.minecraft.world.level.block.state.BlockBehaviour.Properties;
-
 import net.neoforged.neoforge.client.model.generators.ModelFile;
+
+import java.util.List;
+import java.util.function.Supplier;
 
 public abstract class PaletteBlockPartial<B extends Block> {
 
-	public static final PaletteBlockPartial<StairBlock> STAIR = new Stairs();
-	public static final PaletteBlockPartial<SlabBlock> SLAB = new Slab(false);
-	public static final PaletteBlockPartial<SlabBlock> UNIQUE_SLAB = new Slab(true);
-	public static final PaletteBlockPartial<WallBlock> WALL = new Wall();
+    public static final PaletteBlockPartial<StairBlock> STAIR = new Stairs();
+    public static final PaletteBlockPartial<SlabBlock> SLAB = new Slab(false);
+    public static final PaletteBlockPartial<SlabBlock> UNIQUE_SLAB = new Slab(true);
+    public static final PaletteBlockPartial<WallBlock> WALL = new Wall();
 
-	public static final PaletteBlockPartial<?>[] ALL_PARTIALS = {STAIR, SLAB, WALL};
-	public static final PaletteBlockPartial<?>[] FOR_POLISHED = {STAIR, UNIQUE_SLAB, WALL};
+    public static final PaletteBlockPartial<?>[] ALL_PARTIALS = {STAIR, SLAB, WALL};
+    public static final PaletteBlockPartial<?>[] FOR_POLISHED = {STAIR, UNIQUE_SLAB, WALL};
 
-	private String name;
+    private final String name;
 
-	private PaletteBlockPartial(String name) {
-		this.name = name;
-	}
+    private PaletteBlockPartial(String name) {
+        this.name = name;
+    }
 
-	public @NonnullType BlockBuilder<B, CreateRegistrate> create(String variantName, PaletteBlockPattern pattern,
-																 BlockEntry<? extends Block> block, AllPaletteStoneTypes variant) {
-		String patternName = Lang.nonPluralId(pattern.createName(variantName));
-		String blockName = patternName + "_" + this.name;
+    public @NonnullType BlockBuilder<B, CreateRegistrate> create(
+            String variantName,
+            PaletteBlockPattern pattern,
+            BlockEntry<? extends Block> block,
+            AllPaletteStoneTypes variant) {
+        String patternName = Lang.nonPluralId(pattern.createName(variantName));
+        String blockName = patternName + "_" + this.name;
 
-		BlockBuilder<B, CreateRegistrate> blockBuilder = Create.registrate()
-			.block(blockName, p -> createBlock(block))
-			.blockstate((c, p) -> generateBlockState(c, p, variantName, pattern, block))
-			.recipe((c, p) -> createRecipes(variant, block, c, p))
-			.transform(b -> transformBlock(b, variantName, pattern));
+        BlockBuilder<B, CreateRegistrate> blockBuilder = Create.registrate()
+                .block(blockName, p -> createBlock(block))
+                .blockstate((c, p) -> generateBlockState(c, p, variantName, pattern, block))
+                .recipe((c, p) -> createRecipes(variant, block, c, p))
+                .transform(b -> transformBlock(b, variantName, pattern));
 
-		ItemBuilder<BlockItem, BlockBuilder<B, CreateRegistrate>> itemBuilder = blockBuilder.item()
-			.transform(b -> transformItem(b, variantName, pattern));
+        ItemBuilder<BlockItem, BlockBuilder<B, CreateRegistrate>> itemBuilder =
+                blockBuilder.item().transform(b -> transformItem(b, variantName, pattern));
 
-		if (canRecycle())
-			itemBuilder.tag(variant.materialTag);
+        if (canRecycle()) itemBuilder.tag(variant.materialTag);
 
-		return itemBuilder.build();
-	}
+        return itemBuilder.build();
+    }
 
-	protected ResourceLocation getTexture(String variantName, PaletteBlockPattern pattern, int index) {
-		return PaletteBlockPattern.toLocation(variantName, pattern.getTexture(index));
-	}
+    protected ResourceLocation getTexture(
+            String variantName, PaletteBlockPattern pattern, int index) {
+        return PaletteBlockPattern.toLocation(variantName, pattern.getTexture(index));
+    }
 
-	protected BlockBuilder<B, CreateRegistrate> transformBlock(BlockBuilder<B, CreateRegistrate> builder,
-															   String variantName, PaletteBlockPattern pattern) {
-		getBlockTags().forEach(builder::tag);
-		return builder.transform(pickaxeOnly());
-	}
+    protected BlockBuilder<B, CreateRegistrate> transformBlock(
+            BlockBuilder<B, CreateRegistrate> builder,
+            String variantName,
+            PaletteBlockPattern pattern) {
+        getBlockTags().forEach(builder::tag);
+        return builder.transform(pickaxeOnly());
+    }
 
-	protected ItemBuilder<BlockItem, BlockBuilder<B, CreateRegistrate>> transformItem(
-		ItemBuilder<BlockItem, BlockBuilder<B, CreateRegistrate>> builder, String variantName,
-		PaletteBlockPattern pattern) {
-		getItemTags().forEach(builder::tag);
-		return builder;
-	}
+    protected ItemBuilder<BlockItem, BlockBuilder<B, CreateRegistrate>> transformItem(
+            ItemBuilder<BlockItem, BlockBuilder<B, CreateRegistrate>> builder,
+            String variantName,
+            PaletteBlockPattern pattern) {
+        getItemTags().forEach(builder::tag);
+        return builder;
+    }
 
-	protected boolean canRecycle() {
-		return true;
-	}
+    protected boolean canRecycle() {
+        return true;
+    }
 
-	protected abstract Iterable<TagKey<Block>> getBlockTags();
+    protected abstract Iterable<TagKey<Block>> getBlockTags();
 
-	protected abstract Iterable<TagKey<Item>> getItemTags();
+    protected abstract Iterable<TagKey<Item>> getItemTags();
 
-	protected abstract B createBlock(Supplier<? extends Block> block);
+    protected abstract B createBlock(Supplier<? extends Block> block);
 
-	protected abstract void createRecipes(AllPaletteStoneTypes type, BlockEntry<? extends Block> patternBlock,
-										  DataGenContext<Block, ? extends Block> c, RegistrateRecipeProvider p);
+    protected abstract void createRecipes(
+            AllPaletteStoneTypes type,
+            BlockEntry<? extends Block> patternBlock,
+            DataGenContext<Block, ? extends Block> c,
+            RegistrateRecipeProvider p);
 
-	protected abstract void generateBlockState(DataGenContext<Block, B> ctx, RegistrateBlockstateProvider prov,
-											   String variantName, PaletteBlockPattern pattern, Supplier<? extends Block> block);
+    protected abstract void generateBlockState(
+            DataGenContext<Block, B> ctx,
+            RegistrateBlockstateProvider prov,
+            String variantName,
+            PaletteBlockPattern pattern,
+            Supplier<? extends Block> block);
 
-	private static class Stairs extends PaletteBlockPartial<StairBlock> {
+    private static class Stairs extends PaletteBlockPartial<StairBlock> {
 
-		public Stairs() {
-			super("stairs");
-		}
+        public Stairs() {
+            super("stairs");
+        }
 
-		@Override
-		protected StairBlock createBlock(Supplier<? extends Block> block) {
-			return new StairBlock(block.get().defaultBlockState(), Properties.ofFullCopy(block.get()));
-		}
+        @Override
+        protected StairBlock createBlock(Supplier<? extends Block> block) {
+            return new StairBlock(
+                    block.get().defaultBlockState(), Properties.ofFullCopy(block.get()));
+        }
 
-		@Override
-		protected void generateBlockState(DataGenContext<Block, StairBlock> ctx, RegistrateBlockstateProvider prov,
-										  String variantName, PaletteBlockPattern pattern, Supplier<? extends Block> block) {
-			prov.stairsBlock(ctx.get(), getTexture(variantName, pattern, 0));
-		}
+        @Override
+        protected void generateBlockState(
+                DataGenContext<Block, StairBlock> ctx,
+                RegistrateBlockstateProvider prov,
+                String variantName,
+                PaletteBlockPattern pattern,
+                Supplier<? extends Block> block) {
+            prov.stairsBlock(ctx.get(), getTexture(variantName, pattern, 0));
+        }
 
-		@Override
-		protected Iterable<TagKey<Block>> getBlockTags() {
-			return Arrays.asList(BlockTags.STAIRS);
-		}
+        @Override
+        protected Iterable<TagKey<Block>> getBlockTags() {
+            return List.of(BlockTags.STAIRS);
+        }
 
-		@Override
-		protected Iterable<TagKey<Item>> getItemTags() {
-			return Arrays.asList(ItemTags.STAIRS);
-		}
+        @Override
+        protected Iterable<TagKey<Item>> getItemTags() {
+            return List.of(ItemTags.STAIRS);
+        }
 
-		@Override
-		protected void createRecipes(AllPaletteStoneTypes type, BlockEntry<? extends Block> patternBlock,
-									 DataGenContext<Block, ? extends Block> c, RegistrateRecipeProvider p) {
-			RecipeCategory category = RecipeCategory.BUILDING_BLOCKS;
-			p.stairs(DataIngredient.items(patternBlock.get()), category, c::get, c.getName(), false);
-			p.stonecutting(DataIngredient.tag(type.materialTag), category, c::get, 1);
-		}
+        @Override
+        protected void createRecipes(
+                AllPaletteStoneTypes type,
+                BlockEntry<? extends Block> patternBlock,
+                DataGenContext<Block, ? extends Block> c,
+                RegistrateRecipeProvider p) {
+            RecipeCategory category = RecipeCategory.BUILDING_BLOCKS;
+            p.stairs(
+                    DataIngredient.items(patternBlock.get()), category, c::get, c.getName(), false);
+            p.stonecutting(DataIngredient.tag(type.materialTag), category, c::get, 1);
+        }
+    }
 
-	}
+    private static class Slab extends PaletteBlockPartial<SlabBlock> {
 
-	private static class Slab extends PaletteBlockPartial<SlabBlock> {
+        private final boolean customSide;
 
-		private boolean customSide;
+        public Slab(boolean customSide) {
+            super("slab");
+            this.customSide = customSide;
+        }
 
-		public Slab(boolean customSide) {
-			super("slab");
-			this.customSide = customSide;
-		}
+        @Override
+        protected SlabBlock createBlock(Supplier<? extends Block> block) {
+            return new SlabBlock(Properties.ofFullCopy(block.get()));
+        }
 
-		@Override
-		protected SlabBlock createBlock(Supplier<? extends Block> block) {
-			return new SlabBlock(Properties.ofFullCopy(block.get()));
-		}
+        @Override
+        protected boolean canRecycle() {
+            return false;
+        }
 
-		@Override
-		protected boolean canRecycle() {
-			return false;
-		}
+        @Override
+        protected void generateBlockState(
+                DataGenContext<Block, SlabBlock> ctx,
+                RegistrateBlockstateProvider prov,
+                String variantName,
+                PaletteBlockPattern pattern,
+                Supplier<? extends Block> block) {
+            String name = ctx.getName();
+            ResourceLocation mainTexture = getTexture(variantName, pattern, 0);
+            ResourceLocation sideTexture =
+                    customSide ? getTexture(variantName, pattern, 1) : mainTexture;
 
-		@Override
-		protected void generateBlockState(DataGenContext<Block, SlabBlock> ctx, RegistrateBlockstateProvider prov,
-										  String variantName, PaletteBlockPattern pattern, Supplier<? extends Block> block) {
-			String name = ctx.getName();
-			ResourceLocation mainTexture = getTexture(variantName, pattern, 0);
-			ResourceLocation sideTexture = customSide ? getTexture(variantName, pattern, 1) : mainTexture;
+            ModelFile bottom = prov.models().slab(name, sideTexture, mainTexture, mainTexture);
+            ModelFile top =
+                    prov.models().slabTop(name + "_top", sideTexture, mainTexture, mainTexture);
+            ModelFile doubleSlab;
 
-			ModelFile bottom = prov.models()
-				.slab(name, sideTexture, mainTexture, mainTexture);
-			ModelFile top = prov.models()
-				.slabTop(name + "_top", sideTexture, mainTexture, mainTexture);
-			ModelFile doubleSlab;
+            if (customSide) {
+                doubleSlab = prov.models().cubeColumn(name + "_double", sideTexture, mainTexture);
+            } else {
+                doubleSlab =
+                        prov.models().getExistingFile(prov.modLoc(pattern.createName(variantName)));
+            }
 
-			if (customSide) {
-				doubleSlab = prov.models()
-					.cubeColumn(name + "_double", sideTexture, mainTexture);
-			} else {
-				doubleSlab = prov.models()
-					.getExistingFile(prov.modLoc(pattern.createName(variantName)));
-			}
+            prov.slabBlock(ctx.get(), bottom, top, doubleSlab);
+        }
 
-			prov.slabBlock(ctx.get(), bottom, top, doubleSlab);
-		}
+        @Override
+        protected Iterable<TagKey<Block>> getBlockTags() {
+            return List.of(BlockTags.SLABS);
+        }
 
-		@Override
-		protected Iterable<TagKey<Block>> getBlockTags() {
-			return Arrays.asList(BlockTags.SLABS);
-		}
+        @Override
+        protected Iterable<TagKey<Item>> getItemTags() {
+            return List.of(ItemTags.SLABS);
+        }
 
-		@Override
-		protected Iterable<TagKey<Item>> getItemTags() {
-			return Arrays.asList(ItemTags.SLABS);
-		}
+        @Override
+        protected void createRecipes(
+                AllPaletteStoneTypes type,
+                BlockEntry<? extends Block> patternBlock,
+                DataGenContext<Block, ? extends Block> c,
+                RegistrateRecipeProvider p) {
+            RecipeCategory category = RecipeCategory.BUILDING_BLOCKS;
+            p.slab(DataIngredient.items(patternBlock.get()), category, c::get, c.getName(), false);
+            p.stonecutting(DataIngredient.tag(type.materialTag), category, c::get, 2);
+            DataIngredient ingredient = DataIngredient.items(c.get());
+            ShapelessRecipeBuilder.shapeless(category, patternBlock.get())
+                    .requires(ingredient.toVanilla())
+                    .requires(ingredient.toVanilla())
+                    .unlockedBy("has_" + c.getName(), ingredient.getCriterion(p))
+                    .save(p, Create.ID + ":" + c.getName() + "_recycling");
+        }
 
-		@Override
-		protected void createRecipes(AllPaletteStoneTypes type, BlockEntry<? extends Block> patternBlock,
-									 DataGenContext<Block, ? extends Block> c, RegistrateRecipeProvider p) {
-			RecipeCategory category = RecipeCategory.BUILDING_BLOCKS;
-			p.slab(DataIngredient.items(patternBlock.get()), category, c::get, c.getName(), false);
-			p.stonecutting(DataIngredient.tag(type.materialTag), category, c::get, 2);
-			DataIngredient ingredient = DataIngredient.items(c.get());
-			ShapelessRecipeBuilder.shapeless(category, patternBlock.get())
-				.requires(ingredient.toVanilla())
-				.requires(ingredient.toVanilla())
-				.unlockedBy("has_" + c.getName(), ingredient.getCriterion(p))
-				.save(p, Create.ID + ":" + c.getName() + "_recycling");
-		}
+        @Override
+        protected BlockBuilder<SlabBlock, CreateRegistrate> transformBlock(
+                BlockBuilder<SlabBlock, CreateRegistrate> builder,
+                String variantName,
+                PaletteBlockPattern pattern) {
+            builder.loot((lt, block) -> lt.add(block, lt.createSlabItemTable(block)));
+            return super.transformBlock(builder, variantName, pattern);
+        }
+    }
 
-		@Override
-		protected BlockBuilder<SlabBlock, CreateRegistrate> transformBlock(
-			BlockBuilder<SlabBlock, CreateRegistrate> builder, String variantName, PaletteBlockPattern pattern) {
-			builder.loot((lt, block) -> lt.add(block, lt.createSlabItemTable(block)));
-			return super.transformBlock(builder, variantName, pattern);
-		}
+    private static class Wall extends PaletteBlockPartial<WallBlock> {
 
-	}
+        public Wall() {
+            super("wall");
+        }
 
-	private static class Wall extends PaletteBlockPartial<WallBlock> {
+        @Override
+        protected WallBlock createBlock(Supplier<? extends Block> block) {
+            return new WallBlock(Properties.ofFullCopy(block.get()).forceSolidOn());
+        }
 
-		public Wall() {
-			super("wall");
-		}
+        @Override
+        protected ItemBuilder<BlockItem, BlockBuilder<WallBlock, CreateRegistrate>> transformItem(
+                ItemBuilder<BlockItem, BlockBuilder<WallBlock, CreateRegistrate>> builder,
+                String variantName,
+                PaletteBlockPattern pattern) {
+            builder.model(
+                    (c, p) -> p.wallInventory(c.getName(), getTexture(variantName, pattern, 0)));
+            return super.transformItem(builder, variantName, pattern);
+        }
 
-		@Override
-		protected WallBlock createBlock(Supplier<? extends Block> block) {
-			return new WallBlock(Properties.ofFullCopy(block.get()).forceSolidOn());
-		}
+        @Override
+        protected void generateBlockState(
+                DataGenContext<Block, WallBlock> ctx,
+                RegistrateBlockstateProvider prov,
+                String variantName,
+                PaletteBlockPattern pattern,
+                Supplier<? extends Block> block) {
+            prov.wallBlock(
+                    ctx.get(),
+                    pattern.createName(variantName),
+                    getTexture(variantName, pattern, 0));
+        }
 
-		@Override
-		protected ItemBuilder<BlockItem, BlockBuilder<WallBlock, CreateRegistrate>> transformItem(
-			ItemBuilder<BlockItem, BlockBuilder<WallBlock, CreateRegistrate>> builder, String variantName,
-			PaletteBlockPattern pattern) {
-			builder.model((c, p) -> p.wallInventory(c.getName(), getTexture(variantName, pattern, 0)));
-			return super.transformItem(builder, variantName, pattern);
-		}
+        @Override
+        protected Iterable<TagKey<Block>> getBlockTags() {
+            return List.of(BlockTags.WALLS);
+        }
 
-		@Override
-		protected void generateBlockState(DataGenContext<Block, WallBlock> ctx, RegistrateBlockstateProvider prov,
-										  String variantName, PaletteBlockPattern pattern, Supplier<? extends Block> block) {
-			prov.wallBlock(ctx.get(), pattern.createName(variantName), getTexture(variantName, pattern, 0));
-		}
+        @Override
+        protected Iterable<TagKey<Item>> getItemTags() {
+            return List.of(ItemTags.WALLS);
+        }
 
-		@Override
-		protected Iterable<TagKey<Block>> getBlockTags() {
-			return Arrays.asList(BlockTags.WALLS);
-		}
-
-		@Override
-		protected Iterable<TagKey<Item>> getItemTags() {
-			return Arrays.asList(ItemTags.WALLS);
-		}
-
-		@Override
-		protected void createRecipes(AllPaletteStoneTypes type, BlockEntry<? extends Block> patternBlock,
-									 DataGenContext<Block, ? extends Block> c, RegistrateRecipeProvider p) {
-			RecipeCategory category = RecipeCategory.BUILDING_BLOCKS;
-			p.stonecutting(DataIngredient.tag(type.materialTag), category, c::get, 1);
-			DataIngredient ingredient = DataIngredient.items(patternBlock.get());
-			ShapedRecipeBuilder.shaped(category, c.get(), 6)
-				.pattern("XXX")
-				.pattern("XXX")
-				.define('X', ingredient.toVanilla())
-				.unlockedBy("has_" + p.safeName(ingredient), ingredient.getCriterion(p))
-				.save(p, p.safeId(c.get()));
-		}
-
-	}
-
+        @Override
+        protected void createRecipes(
+                AllPaletteStoneTypes type,
+                BlockEntry<? extends Block> patternBlock,
+                DataGenContext<Block, ? extends Block> c,
+                RegistrateRecipeProvider p) {
+            RecipeCategory category = RecipeCategory.BUILDING_BLOCKS;
+            p.stonecutting(DataIngredient.tag(type.materialTag), category, c::get, 1);
+            DataIngredient ingredient = DataIngredient.items(patternBlock.get());
+            ShapedRecipeBuilder.shaped(category, c.get(), 6)
+                    .pattern("XXX")
+                    .pattern("XXX")
+                    .define('X', ingredient.toVanilla())
+                    .unlockedBy("has_" + p.safeName(ingredient), ingredient.getCriterion(p))
+                    .save(p, p.safeId(c.get()));
+        }
+    }
 }
